--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "alarm-clock",
+  "name": "template",
   "version": "1.0.0",
-  "description": "#### Alarm Clock App using Node, Gulp and Bower",
+  "description": ,
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
