--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "#### Find a nearby doctor who treats a specific condition",
   "main": "gulpfile.js",
   "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
