--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "#### Find a nearby doctor who treats a specific condition",
   "main": "gulpfile.js",
-  "dependencies": {},
+  "dependencies": {
+    "gulp": "^3.9.1"
+  },
   "devDependencies": {
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.0"
